# campus-eats

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  Dockerfile.dev  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 5c8e69300bb5_add_app_settings.py  5fc1af1c0a97_initial_schema.py  734bb0f4f3cc_add_audit_logs.py
backend/app/: main.py
backend/app/core/: config.py  db.py  deps.py  jwt.py  middleware.py  rate_limit.py  utils.py
backend/app/models/: __init__.py  address.py  app_settings.py  audit_log.py  cart.py  category.py  coupon.py  delivery.py  enums.py  food.py  inventory.py  notification.py  order.py  payment.py  review.py  role.py  user.py
backend/app/repositories/: address_repository.py  analytics_repository.py  app_settings_repository.py  audit_log_repository.py  base.py  cart_repository.py  category_repository.py  coupon_repository.py  delivery_partner_repository.py  delivery_zone_repository.py  food_repository.py  notification_repository.py  order_repository.py  payment_repository.py  review_repository.py  role_repository.py  user_repository.py  wishlist_repository.py
backend/app/schemas/: address.py  admin_user.py  analytics.py  app_settings.py  audit_log.py  auth.py  cart.py  coupon.py  delivery.py  delivery_zone.py  menu.py  notification.py  order.py  payment.py  report.py  review.py  wishlist.py
backend/app/services/: address_service.py  admin_user_service.py  app_settings_service.py  (+21 more)
backend/scripts/: seed.py
backend/tests/: conftest.py  helpers.py
(+164 files in other folders)
