[project]
name = "campus-eats-backend"
version = "0.1.0"
description = "Campus Eats — campus food delivery platform backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.35",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.9",
    "alembic>=1.13.3",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.5.2",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.1",
    "python-multipart>=0.0.12",
    "redis>=5.1.1",
    "celery>=5.4.0",
    "razorpay>=1.4.2",
    "cloudinary>=1.41.0",
    "slowapi>=0.1.9",
    "shapely>=2.0.6",
    "reportlab>=4.2.5",
    "openpyxl>=3.1.5",
    "websockets>=13.1",
    "httpx>=0.27.2",
    "email-validator>=2.2.0",
    "Jinja2>=3.1.4",
    "tenacity>=9.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "aiosqlite>=0.20.0",
    "faker>=30.6.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
